--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,4 @@
-setuptools==41.2.0
-tensorflow==2.5.0
-matplotlib==3.5.1
-gym==0.19.0
-pyglet==1.5.0
-ghast==0.1.0
-dgl==0.6.0
-future==0.18.2
-numpy==1.19.3
-periodictable==1.5.1
-tensorflow-gan==2.0.0
-tensorflow-hub==0.9.0
-imageio==2.9.0
-tqdm==4.48.2
+scikit_image==0.19.2
+skimage==0.0
+tensorflow==2.6.0
+tensorflow_datasets==4.5.2
